--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ android {
     buildFeatures {
         viewBinding true
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
+    }
 }
 
 kapt {
@@ -42,6 +48,14 @@ kapt {
 }
 
 dependencies {
+
+    // compose
+    def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
+    implementation composeBom
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "androidx.compose.ui:ui:1.3.1"
+    implementation "androidx.compose.material:material:1.3.1"
+    implementation 'androidx.compose.ui:ui-tooling-preview'
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
